# music_organizer

./: CMakeLists.txt  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
src/: MusicOrganizer.h  blacklistMan.cpp  blacklistMan.hpp  main.cpp  songItem.cpp  songItem.hpp  songListMan.cpp  songListMan.hpp
